# rust-sak

./: Cargo.toml
.cargo/: config.toml
scripts/: coverage.sh
src/: lib.rs  main.rs
src/crypto/: README.md  chunked_read.rs  mod.rs  sha256_bytes.rs  sha256_file.rs  sha256_string.rs  tests.rs  xxh3_bytes.rs  xxh3_file.rs  xxh3_string.rs
src/fetch/: README.md  download.rs  mod.rs  prepared.rs  request.rs  retry.rs  test_support.rs  tests.rs
src/image/: README.md  decode_bytes.rs  decode_bytes_with_format.rs  decode_file.rs  dispatch.rs  encode_file.rs  encode_writer.rs  error.rs  format.rs  format_from_bytes.rs  info.rs  mod.rs  options.rs  probe_bytes.rs  probe_file.rs  tests.rs
