[package]
name = "rust-sak"
version = "1.0.0"
edition = "2024"

[dependencies]
futures-util = { version = "0.3", default-features = false, optional = true }
hex = { version = "0.4.3", optional = true }
reqwest = { version = "0.13.4", features = ["query", "json", "stream"], optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.150", optional = true }
sha2 = { version = "0.11.0", optional = true }
tokio = { version = "1.52.3", features = ["time", "rt-multi-thread", "macros", "fs", "io-util", "sync"], optional = true }
twox-hash = { version = "2.1.2", default-features = false, features = ["xxhash3_64", "alloc"], optional = true }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt", "time", "test-util", "net", "io-util"] }

[features]
default = []
crypto = ["dep:sha2", "dep:hex", "dep:twox-hash"]
fetch = ["dep:reqwest", "dep:tokio", "dep:serde", "dep:serde_json", "dep:futures-util"]

[[bin]]
name = "playground"
path = "src/main.rs"
required-features = ["fetch"]
